@@ -1,2 +1,1 @@
-require 'rubygems' if RUBY_VERSION.to_f < 1.9
 require 'natto/natto'
